--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
+pandas==1.3.0
 scikit-learn==0.24.2
-pandas
-numpy
-matplotlib
+joblib==1.0.1
+streamlit==1.5.0
+matplotlib==3.4.2
+numpy==1.21.0
